fixed viewport on mobile

--- a/www/style.css
+++ b/www/style.css
@@ -56,13 +56,14 @@ h1 {
         flex-direction: column !important;
         gap: 0.5em;
         width: 100%;
-        margin-bottom: 1em;
+        margin-bottom: 0.2em;
     }
     label, input[type="text"], button, .result {
         font-size: 1em;
         width: 100%;
         min-width: unset;
-        padding: 1em 0.5em;
+        padding-top: 1.1em;
+        padding-bottom: 0.2em;
         margin: 0;
     }
     .result {
@@ -83,7 +84,6 @@ h1 {
 label {
     font-size: 1.2em;
     font-weight: 600;
-    margin-bottom: 0.25rem;
 }
 
 input[type="text"] {
@@ -171,6 +171,7 @@ button:hover {
 }
 
 footer {
+  padding-top: 1em;
   align-self: flex-end;
   text-align: right;
 }
